<resources>
    <string name="app_name">PIHE: Student Details</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="text_student_id" />
    <string name="text_first_name" />
    <string name="hint_student_id" />
    <string name="hint_first_name" />
    <string name="text_last_name" />
    <string name="text_contact_number" />
    <string name="text_address" />
    <string name="label_student_id">Student ID:</string>
    <string name="label_first_name">First Name:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_contact_number">Contact Number:</string>
    <string name="label_address">Address:</string>
</resources>
